--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="head">
+        <p id="head_title">Title of company</p>
+        <p id="head_subtitle">Subtitle of company</p>
+    </div>
+    <div body="body">
+        <div id="games"></div>
+        <div id="news"></div>
+        <div id="contacts"></div>
+    </div>
+    <div class="footer"></div>
 </body>
+
 </html>
