--- a/src/html/juegos.html
+++ b/src/html/juegos.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="head">
+        <p>Title</p>
+        <p>Subtitle</p>
+    </div>
+    <div class="body">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
+    <div class="footer"></div>
 </body>
+
 </html>
