--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,19 +5,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/src/css/index.css">
 </head>
 
 <body>
     <div class="head">
-        <p id="head_title">Title of company</p>
-        <p id="head_subtitle">Subtitle of company</p>
+        <p class="title" id="head_title">Title of company</p>
+        <p class="subtitle" id="head_subtitle">Subtitle of company</p>
     </div>
-    <div body="body">
-        <div id="games"></div>
-        <div id="news"></div>
-        <div id="contacts"></div>
+
+
+
+    <div class="main">
+        <div>
+            <p class="title">Let's Play</p>
+
+            <div class="presentation">
+
+                <div class="presentation_content">
+                    <div class="presentation_content_grid" id="presentation_grid_one">
+                        <img src="/img/paisaje.png" alt="paisaje">
+                    </div>
+
+                    <div class="presentation_content_grid" id="presentation_grid_two">
+                        <p class="subtitle">Explore emotive stories told through artful and minimalist play, now on
+                            multiple
+                            platforms.</p>
+                        <button>Explore</button>
+                    </div>
+
+                    <div class="presentation_content_grid" id="presentation_grid_three">
+                        <button>←</button>
+                        <button>→</button>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="scroll">
+                <img class="scroll_img" src="/img/scroll1.png" alt="">
+                <img class="scroll_img" src="/img/scroll2.png" alt="">
+                <img class="scroll_img" src="/img/scroll3.png" alt="">
+                <img class="scroll_img" src="/img/scroll4.png" alt="">
+            </div>
+        </div>
+        <div id="news">AAAA</div>
+        <div id="contacts">BBBB</div>
     </div>
-    <div class="footer"></div>
+
+
+
+    <div class="footer">
+        <div class="grid">
+            <div class="grid_row">
+                <p class="title">Games</p>
+                <a class="subtitle" href="juegos.html">Sky</a>
+                <a class="subtitle" href="juegos.html">Journey</a>
+                <a class="subtitle" href="juegos.html">Flower</a>
+                <a class="subtitle" href="juegos.html">flOw</a>
+            </div>
+            <div class="grid_row">
+                <p class="title">Studio</p>
+                <a class="subtitle" href="contacto.html">Our Story</a>
+                <a class="subtitle" href="contacto.html">Careers</a>
+                <a class="subtitle" href="contacto.html">Contact</a>
+            </div>
+            <div class="grid_row">
+                <p class="title">Press</p>
+                <a class="subtitle" href="noticias.html">Press Kit</a>
+                <a class="subtitle" href="noticias.html">Awards</a>
+            </div>
+            <div class="grid_row">
+                <p><a href="https://www.facebook.com/"><img src="/img/facebook.svg" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="/img/instagram.svg" alt=""></a>
+                    <a href="https://www.twitter.com/"><img src="/img/twitter.svg" alt=""></a>
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
