--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,44 +16,65 @@
 
 
 
-    <div class="main">
-        <div>
-            <p class="title">Let's Play</p>
+    <div class="main" id="body_one">
+        <p class="title">Let's Play</p>
 
-            <div class="presentation">
+        <div class="presentation">
 
-                <div class="presentation_content">
-                    <div class="presentation_content_grid" id="presentation_grid_one">
-                        <img src="/img/paisaje.png" alt="paisaje">
-                    </div>
-
-                    <div class="presentation_content_grid" id="presentation_grid_two">
-                        <p class="subtitle">Explore emotive stories told through artful and minimalist play, now on
-                            multiple
-                            platforms.</p>
-                        <button>Explore</button>
-                    </div>
-
-                    <div class="presentation_content_grid" id="presentation_grid_three">
-                        <button>←</button>
-                        <button>→</button>
-                    </div>
+            <div class="presentation_content">
+                <div class="presentation_content_grid" id="presentation_grid_one">
+                    <img src="/img/paisaje.png" alt="paisaje">
                 </div>
 
+                <div class="presentation_content_grid" id="presentation_grid_two">
+                    <p class="subtitle">Explore emotive stories told through artful and minimalist play, now on
+                        multiple
+                        platforms.</p>
+                    <button>Explore</button>
+                </div>
+
+                <div class="presentation_content_grid" id="presentation_grid_three">
+                    <button>←</button>
+                    <button>→</button>
+                </div>
             </div>
 
-            <div class="scroll">
-                <img class="scroll_img" src="/img/scroll1.png" alt="">
-                <img class="scroll_img" src="/img/scroll2.png" alt="">
-                <img class="scroll_img" src="/img/scroll3.png" alt="">
-                <img class="scroll_img" src="/img/scroll4.png" alt="">
+        </div>
+
+        <div class="scroll">
+            <img src="/img/scroll1.png" alt="game1">
+            <img src="/img/scroll2.png" alt="game2">
+            <img src="/img/scroll3.png" alt="game3">
+            <img src="/img/scroll4.png" alt="game4">
+        </div>
+    </div>
+
+    <div class="main" id="news">
+        <p class="title">Recent News</p>
+        <div class="scroll">
+            <div class="article">
+                <img src="/img/placeholder.png" alt="news article 1">
+                <p class="title">That videogame company announces Sky: The Two Embers - Part 1</p>
+                <p class="subtitle">Jan 21, 2024</p>
+            </div>
+            <div class="article">
+                <img src="/img/placeholder.png" alt="news article 2">
+                <p class="title">That videogame company announces Sky: The Two Embers - Part 1 and Global launch</p>
+                <p class="subtitle">Jan 21, 2024</p>
+            </div>
+            <div class="article">
+                <img src="/img/placeholder.png" alt="news article 3">
+                <p class="title">We're going big with the new in-house publishing capabilities</p>
+                <p class="subtitle">Jan 21, 2024</p>
             </div>
         </div>
-        <div id="news">AAAA</div>
-        <div id="contacts">BBBB</div>
     </div>
 
 
+
+
+    <div id="contacts">
+    </div>
 
     <div class="footer">
         <div class="grid">
