ACABE LAS PÁGINAS QUE HABÍA ACORDADO

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>that game company - Index</title>
+    <link rel="stylesheet" href="/src/css/index.css">
 </head>
+
 <body>
-    
+    <div class="head">
+        <p class="title" id="head_title"> <span class="blue_primary_text">that</span> <span
+                class="yellow_primary_text">game</span> <span class="red_primary_text">company</span> </p>
+        <p class="subtitle" id="head_subtitle">
+            is a game studio dedicated to creating <span class="blue_primary_text">timeless</span> interactive
+            entertainment
+            that <span class="yellow_primary_text">inspires</span> human <span
+                class="red_primary_text">connection</span> across the world, for all ages.
+        </p>
+    </div>
+
+
+
+    <div class="main" id="body_one">
+        <p class="title">Let's Play</p>
+
+        <div class="presentation">
+
+            <div class="presentation_content">
+                <div class="presentation_content_grid" id="presentation_grid_one">
+                    <img src="/img/paisaje.png" alt="paisaje">
+                </div>
+
+                <div class="presentation_content_grid" id="presentation_grid_two">
+                    <p class="subtitle">Explore emotive stories told through artful and minimalist play, now on
+                        multiple
+                        platforms.</p>
+                    <button>Explore</button>
+                </div>
+
+                <!-- Esto por ahora esta comentado porque, como esta ahora no cumple niguna funcionalidad.
+
+                <div class="presentation_content_grid" id="presentation_grid_three">
+                    <button>←</button>
+                    <button>→</button>
+                </div>
+-->
+            </div>
+
+        </div>
+
+        <!-- ESTOS ENLACES SON PLACEHOLDERS, HAY QUE CAMBIARLOS ANTES DE ENSEÑARLOS AL CLIENTE -->
+
+        <div class="scroll" id="presentation_game_images">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <img src="/img/scroll1.png" alt="game1"> </a>
+            <a href="https://youtu.be/QOhmcbfwxnA?si=0bivh4o4yeAaJ0q8"> <img src="/img/scroll2.png" alt="game2"> </a>
+            <a href="https://youtu.be/URtqADoz9uA?si=1Ba-fkm0Ym0VCwhE&t=19"> <img src="/img/scroll3.png" alt="game3">
+            </a>
+            <a href="https://youtu.be/2MiNsu724zE?si=WTvVTstrYgVFJj7t"> <img src="/img/scroll4.png" alt="game4"> </a>
+
+
+        </div>
+    </div>
+
+    <div class="main" id="news">
+        <p class="title">Recent News</p>
+        <div class="scroll">
+            <div class="article">
+                <a href="">
+                    <img src="/img/image_preview1.png" alt="news article 1">
+                    <p class="article_title">That videogame company announces Sky: The Two Embers - Part 1</p>
+                    <p class="article_subtitle">Jan 21, 2024</p>
+                </a>
+            </div>
+            <div class="article">
+                <a href="">
+                    <img src="/img/image_preview2.png" alt="news article 2">
+                    <p class="article_title">That videogame company announces Sky: The Two Embers - Part 1 and Global
+                        launch
+                    </p>
+                    <p class="article_subtitle">Jan 21, 2024</p>
+                </a>
+            </div>
+            <div class="article">
+                <a href="">
+                    <img src="/img/image_preview3.png" alt="news article 3">
+                    <p class="article_title">We're going big with the new in-house publishing capabilities</p>
+                    <p class="article_subtitle">Jan 21, 2024</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="main" id="contacts">
+        <div id="contacts_text">
+            <p class="title">Together we make magic</p>
+            <p class="subtitle">Storytelling through artful interactivity is our passion. We're on a mission to build a
+                team of like-minded creatives and engineers to make that happen.</p>
+            <a href="/src/html/contacto.html">
+                <button>Our studio</button>
+            </a>
+        </div>
+
+        <div id="contacts_photo">
+            <img src="/img/team_subtitle.png" alt="Our team">
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="grid">
+            <div class="grid_row">
+                <p class="title">Games</p>
+                <a class="subtitle" href="juegos.html">Sky</a>
+                <a class="subtitle" href="juegos.html">Journey</a>
+                <a class="subtitle" href="juegos.html">Flower</a>
+                <a class="subtitle" href="juegos.html">flOw</a>
+            </div>
+            <div class="grid_row">
+                <p class="title">Studio</p>
+                <a class="subtitle" href="contacto.html">Our Story</a>
+                <a class="subtitle" href="contacto.html">Careers</a>
+                <a class="subtitle" href="contacto.html">Contact</a>
+            </div>
+            <div class="grid_row">
+                <p class="title">Press</p>
+                <a class="subtitle" href="noticias.html">Press Kit</a>
+                <a class="subtitle" href="noticias.html">Awards</a>
+            </div>
+            <div class="grid_row">
+                <p><a href="https://www.facebook.com/"><img src="/img/facebook.svg" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="/img/instagram.svg" alt=""></a>
+                    <a href="https://www.twitter.com/"><img src="/img/twitter.svg" alt=""></a>
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
