ACABADAS AMBAS PÁGINAS.

--- a/src/html/juegos.html
+++ b/src/html/juegos.html
@@ -4,20 +4,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>that game company - Games</title>
+    <link rel="stylesheet" href="/src/css/juegos.css">
 </head>
 
 <body>
     <div class="head">
-        <p>Title</p>
-        <p>Subtitle</p>
+        <p class="title" id="head_title"> <span class="blue_primary_text">that</span> <span
+                class="yellow_primary_text">game</span> <span class="red_primary_text">company</span> </p>
+        <p class="subtitle" id="head_subtitle">
+            is a game studio dedicated to creating <span class="blue_primary_text">timeless</span> interactive
+            entertainment
+            that <span class="yellow_primary_text">inspires</span> human <span
+                class="red_primary_text">connection</span> across the world, for all ages.
+        </p>
+        <p class="title">Nuestros Juegos</p>
+        <p class=" subtitle">Explora nuestra colección de aventuras digitales.</p>
+        <div class="main_cards">
     </div>
-    <div class="body">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+
+    <div class="main">
+        <div class="card">
+            <img src="/img/imagensoldado.png" alt="Soldado" id="card_main_img">
+            <div class="card_stuff">
+                <p class="card_title">Cyber Odyssey</p>
+                <div class="card_tags">
+                    <p class="tag_yellow">RPG</p>
+                    <p class="tag_red">Sci-Fi</p>
+                </div>
+                <div class="card_data">
+                    <p>Plataformas: PC, PlayStation 5, Xbox Series X/S</p>
+                    <p>Lanzamiento: 15 de Octubre, 2023</p>
+                    <p>Última Actualización: 1 de Diciembre, 2023</p>
+                </div>
+                <p class="card_description">Sumérgete en una metrópolis de neón en un futuro distópico. Lucha contra
+                    corporaciones corruptas
+                    y descubre una conspiración que amenaza a toda la humanidad. Una aventura RPG con una narrativa
+                    profunda y combate táctico.</p>
+                <img src="/img/soldadoHorimini.png" alt="Un soldado mirando al frente" class="card_stuff_img">
+                <div class="card_buttons">
+                    <button class="button_detail">Ver detalles</button>
+                    <button class="button_buy">Comprar ahora</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="footer"></div>
+
+    <div class="main">
+        <div class="card">
+            <img src="/img/imagenaranja.png" alt="Soldado" id="card_main_img">
+            <div class="card_stuff">
+                <p class="card_title">Kingdom's Fall</p>
+                <div class="card_tags">
+                    <p class="tag_blue">Estrategia</p>
+                    <p class="tag_black">Fantasía</p>
+                </div>
+                <div class="card_data">
+                    <p>Plataformas: PC</p>
+                    <p>Lanzamiento: 22 de Mayo, 2021</p>
+                    <p>Última Actualización: 5 de Noviembre, 2023</p>
+                </div>
+                <p class="card_description">Un juego de estrategia en tiempo real donde lideras tu facción hacia la
+                    victoria. Gestiona recursos, construye ejércitos y conquista a tus enemigos en un mundo de fantasía
+                    épica.</p>
+                <img src="/img/mujerhori.png" alt="Un soldado mirando al frente" class="card_stuff_img">
+                <div class="card_buttons">
+                    <button class="button_detail">Ver detalles</button>
+                    <button class="button_buy">Comprar ahora</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="card">
+            <img src="/img/pixelHori.png" alt="Soldado" id="card_main_img">
+            <div class="card_stuff">
+                <p class="card_title">Pixel Racer</p>
+                <div class="card_tags">
+                    <p class="tag_yellow">Carreras</p>
+                    <p class="tag_black">Retro</p>
+                    <p class="tag_blue">Arcade</p>
+                </div>
+                <div class="card_data">
+                    <p>Plataformas: PC, Nintendo Switch</p>
+                    <p>Lanzamiento: 1 de Julio, 2019</p>
+                    <p>Última Actualización: 18 de Agosto, 2020</p>
+                </div>
+                <p class="card_description">¡Velocidad y nostalgia se unen en este juego de carreras arcade! Disfruta de
+                    la acción retro con gráficos pixel-art, una banda sonora trepidante y un multijugador local
+                    adictivo.</p>
+                <img src="/img/pixelCapa.png" alt="Un soldado mirando al frente" class="card_stuff_img">
+                <div class="card_buttons">
+                    <button class="button_detail">Ver detalles</button>
+                    <button class="button_disabled">No disponible</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="grid">
+            <div class="grid_row">
+                <p class="title">Games</p>
+                <a class="subtitle" href="juegos.html">Sky</a>
+                <a class="subtitle" href="juegos.html">Journey</a>
+                <a class="subtitle" href="juegos.html">Flower</a>
+                <a class="subtitle" href="juegos.html">flOw</a>
+            </div>
+            <div class="grid_row">
+                <p class="title">Studio</p>
+                <a class="subtitle" href="contacto.html">Our Story</a>
+                <a class="subtitle" href="contacto.html">Careers</a>
+                <a class="subtitle" href="contacto.html">Contact</a>
+            </div>
+            <div class="grid_row">
+                <p class="title">Press</p>
+                <a class="subtitle" href="noticias.html">Press Kit</a>
+                <a class="subtitle" href="noticias.html">Awards</a>
+            </div>
+            <div class="grid_row">
+                <p><a href="https://www.facebook.com/"><img src="/img/facebook.svg" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="/img/instagram.svg" alt=""></a>
+                    <a href="https://www.twitter.com/"><img src="/img/twitter.svg" alt=""></a>
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
