cambios en el footer de contacto

--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -30,7 +30,8 @@
         </div>
     </header>
 
-    <section class="hero">
+    <main class="main-content">
+        <section class="hero">
         <h1>Contáctanos</h1>
         <p>¡Nos encantaría saber de ti! ¿Tienes alguna pregunta o comentario? Rellena el formulario y nos pondremos en contacto contigo lo antes posible.</p>
     </section>
@@ -97,6 +98,7 @@
             </div>
         </div>
     </div>
+    </main>
 
     <footer>
         <div class="footer-content">
