--- a/src/html/noticias.html
+++ b/src/html/noticias.html
@@ -150,8 +150,8 @@
                     <a href="https://discord.com/" class="social-icon">
                         <img src="/img/discord.svg" alt="Discord">
                     </a>
-                    <a href="https://www.youtube.com/" class="social-icon">
-                        <img src="/img/youtube.svg" alt="YouTube">
+                    <a href="https://www.instagram.com/" class="social-icon">
+                        <img src="/img/instagram.svg" alt="Instagram">
                     </a>
                 </div>
             </div>
