--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -10,56 +10,55 @@
     <link rel="stylesheet" href="/src/css/contacto.css">
 </head>
 <body>
-    <header>
+    <header class="encabezado">
         <div class="logo">
-            <div class="logo-icon">
-                <div class="rect-bottom"></div>
-                <div class="rect-top"></div>
+            <div class="icono-logo">
+                <div class="rect-inferior"></div>
+                <div class="rect-superior"></div>
             </div>
             Game Studio
         </div>
-        <nav>
+        <nav class="navegacion">
             <a href="/src/html/index.html">Home</a>
             <a href="/src/html/juegos.html">Games</a>
             <a href="/src/html/noticias.html">About</a>
             <a href="/src/html/contacto.html" class="active">Contact</a>
         </nav>
-        <div class="header-buttons">
-            <a href="#" class="btn-buy">Buy Now</a>
-            <a href="#" class="btn-sign">Sign In</a>
+        <div class="botones-encabezado">
+            <a href="#" class="boton-comprar">Buy Now</a>
+            <a href="#" class="boton-acceder">Sign In</a>
         </div>
     </header>
 
-    <main class="main-content">
-        <section class="hero">
+    <section class="seccion-hero">
         <h1>Contáctanos</h1>
         <p>¡Nos encantaría saber de ti! ¿Tienes alguna pregunta o comentario? Rellena el formulario y nos pondremos en contacto contigo lo antes posible.</p>
     </section>
 
-    <div class="container">
-        <div class="form-section">
+    <div class="contenedor">
+        <div class="seccion-formulario">
             <form id="contactForm">
-                <div class="form-group">
+                <div class="grupo-formulario">
                     <label for="nombre">Tu Nombre</label>
                     <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required>
                 </div>
-                <div class="form-group">
+                <div class="grupo-formulario">
                     <label for="email">Tu Email</label>
                     <input type="email" id="email" name="email" placeholder="Escribe tu dirección de correo electrónico" required>
                 </div>
-                <div class="form-group">
+                <div class="grupo-formulario">
                     <label for="mensaje">Tu Mensaje</label>
                     <textarea id="mensaje" name="mensaje" placeholder="Escribe tu mensaje aquí..." required></textarea>
                 </div>
-                <button type="submit" class="btn-submit">Enviar Mensaje</button>
+                <button type="submit" class="boton-enviar">Enviar Mensaje</button>
             </form>
         </div>
 
-        <div class="info-section">
-            <div class="info-card">
+        <div class="seccion-info">
+            <div class="tarjeta-info">
                 <h2>Otras Formas de Conectar</h2>
-                <div class="contact-info">
-                    <div class="contact-icon">✉</div>
+                <div class="info-contacto">
+                    <div class="icono-contacto">✉</div>
                     <div>
                         <strong>Email</strong><br>
                         contacto@gamestudio.com
@@ -67,24 +66,24 @@
                 </div>
             </div>
 
-            <div class="info-card">
+            <div class="tarjeta-info">
                 <h2>Síguenos</h2>
-                <div class="social-links">
-                    <a href="https://x.com/?lang=es" class="social-icon" title="Twitter">
+                <div class="enlaces-sociales">
+                    <a href="https://x.com/?lang=es" class="icono-social" title="Twitter">
                       <img src="/img/twitter.svg" alt="Twitter" width="20" height="20">
                     </a>
-                    <a href="https://www.facebook.com/?locale=es_ES" class="social-icon" title="Facebook">
+                    <a href="https://www.facebook.com/?locale=es_ES" class="icono-social" title="Facebook">
                       <img src="/img/facebook.svg" alt="Facebook" width="20" height="20">
                     </a>
-                    <a href="https://www.instagram.com/" class="social-icon" title="Instagram">
+                    <a href="https://www.instagram.com/" class="icono-social" title="Instagram">
                       <img src="/img/instagram.svg" alt="Instagram" width="20" height="20">
                     </a>
                 </div>
             </div>
 
-            <div class="info-card">
+            <div class="tarjeta-info">
                 <h2>Nuestra Ubicación</h2>
-                <div class="map-container">
+                <div class="contenedor-mapa">
                     <iframe 
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106494.34888700429!2d-70.74854868867186!3d-33.447487231152206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5410425af2f%3A0x8475d53c400f0931!2sSantiago%2C%20Regi%C3%B3n%20Metropolitana%2C%20Chile!5e0!3m2!1ses!2ses!4v1699999999999!5m2!1ses!2ses" 
                         width="100%" 
@@ -98,11 +97,10 @@
             </div>
         </div>
     </div>
-    </main>
 
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
+    <footer class="pie-pagina">
+        <div class="contenido-pie">
+            <div class="seccion-pie">
                 <h3>SOLUCIONES</h3>
                 <ul>
                     <li><a href="#">Marketing</a></li>
@@ -111,7 +109,7 @@
                     <li><a href="#">Estadísticas</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="seccion-pie">
                 <h3>SOPORTE</h3>
                 <ul>
                     <li><a href="#">Precios</a></li>
@@ -120,7 +118,7 @@
                     <li><a href="#">Estado de la API</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="seccion-pie">
                 <h3>COMPAÑÍA</h3>
                 <ul>
                     <li><a href="#">Sobre nosotros</a></li>
@@ -129,7 +127,7 @@
                     <li><a href="#">Prensa</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="seccion-pie">
                 <h3>LEGAL</h3>
                 <ul>
                     <li><a href="#">Reclamación</a></li>
@@ -138,7 +136,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer-bottom">
+        <div class="pie-inferior">
             © 2024 Game Studio, Inc. Todos los derechos reservados.
         </div>
     </footer>
