correcciones en noticias

--- a/src/html/noticias.html
+++ b/src/html/noticias.html
@@ -10,161 +10,161 @@
     <link rel="stylesheet" href="../css/noticias.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="nav-wrapper">
+    <!-- Encabezado -->
+    <header class="encabezado">
+        <div class="contenedor">
+            <div class="envoltura-nav">
                 <div class="logo">
                     <!-- Logo hecho con 3 divs(escalones) -->
-                    <div class="stair-step stair-1"></div>
-                    <div class="stair-step stair-2"></div>
-                    <div class="stair-step stair-3"></div>
+                    <div class="escalon escalon-1"></div>
+                    <div class="escalon escalon-2"></div>
+                    <div class="escalon escalon-3"></div>
                     <span>Indie Game Studio</span>
                 </div>
-                <nav class="nav">
+                <nav class="navegacion">
                     <a href="juegos.html">Juegos</a>
                     <a href="index.html">Sobre nosotros</a>
                     <a href="contacto.html">Contacto</a>
-                    <a href="juegos.html" class="btn-primary">Comprar Juegos</a>
+                    <a href="juegos.html" class="boton-primario">Comprar Juegos</a>
                 </nav>
             </div>
         </div>
     </header>
 
-    <!-- Main -->
-    <main class="main-content">
-        <div class="container">
+    <!-- Principal -->
+    <main class="contenido-principal">
+        <div class="contenedor">
             <!-- Titulo -->
-            <section class="page-header">
+            <section class="encabezado-pagina">
                 <h1>Noticias</h1>
-                <p class="subtitle">Últimas actualizaciones y anuncios de nuestro estudio</p>
+                <p class="subtitulo">Últimas actualizaciones y anuncios de nuestro estudio</p>
             </section>
 
             <!-- Filtros para los juegos -->
-            <div class="filter-tabs">
-                <button class="tab active">Todo</button>
-                <button class="tab">Actualizaciones</button>
-                <button class="tab">Anuncios</button>
-                <button class="tab">Eventos</button>
+            <div class="pestanas-filtro">
+                <button class="pestana activa">Todo</button>
+                <button class="pestana">Actualizaciones</button>
+                <button class="pestana">Anuncios</button>
+                <button class="pestana">Eventos</button>
             </div>
 
             <!-- Noticias -->
-            <div class="news-grid">
+            <div class="cuadricula-noticias">
                 <!-- Ej 1 -->
-                <article class="news-card" data-category="actualizaciones">
-                    <div class="news-image">
+                <article class="tarjeta-noticia" data-category="actualizaciones">
+                    <div class="imagen-noticia">
                         <img src="/img/juego1.png" alt="CyberQuest">
                     </div>
-                    <div class="news-content">
-                        <span class="news-tag">Actualizaciones de juegos</span>
-                        <h2 class="news-title">¡Nuevo nivel disponible para CyberQuest!</h2>
-                        <p class="news-description">
+                    <div class="contenido-noticia">
+                        <span class="etiqueta-noticia">Actualizaciones de juegos</span>
+                        <h2 class="titulo-noticia">¡Nuevo nivel disponible para CyberQuest!</h2>
+                        <p class="descripcion-noticia">
                             Hemos trabajado duro en una nueva actualización para CyberQuest que incluye correcciones de errores, nuevas características y un nivel completamente nuevo. ¡Descubre todos los detalles aquí!
                         </p>
-                        <p class="news-date">Publicado el 26 de octubre de 2023</p>
-                        <button class="btn-secondary">Leer más</button>
+                        <p class="fecha-noticia">Publicado el 26 de octubre de 2023</p>
+                        <button class="boton-secundario">Leer más</button>
                     </div>
                 </article>
 
                 <!-- Ej 2 -->
-                <article class="news-card" data-category="anuncios">
-                    <div class="news-image">
+                <article class="tarjeta-noticia" data-category="anuncios">
+                    <div class="imagen-noticia">
                         <img src="/img/juego2.png" alt="Nuevo proyecto">
                     </div>
-                    <div class="news-content">
-                        <span class="news-tag orange">Anuncios</span>
-                        <h2 class="news-title">Anunciamos nuestro próximo proyecto</h2>
-                        <p class="news-description">
+                    <div class="contenido-noticia">
+                        <span class="etiqueta-noticia naranja">Anuncios</span>
+                        <h2 class="titulo-noticia">Anunciamos nuestro próximo proyecto</h2>
+                        <p class="descripcion-noticia">
                             ¡Estamos encantados de anunciar que estamos trabajando en un nuevo juego! Aún no podemos compartir muchos detalles, pero estamos muy emocionados de compartir esta noticia con ustedes.
                         </p>
-                        <p class="news-date">Publicado el 24 de octubre de 2023</p>
-                        <button class="btn-secondary">Leer más</button>
+                        <p class="fecha-noticia">Publicado el 24 de octubre de 2023</p>
+                        <button class="boton-secundario">Leer más</button>
                     </div>
                 </article>
 
                 <!-- Ej 3 -->
-                <article class="news-card" data-category="eventos">
-                    <div class="news-image">
+                <article class="tarjeta-noticia" data-category="eventos">
+                    <div class="imagen-noticia">
                         <img src="/img/juego3.png" alt="Game Dev Con">
                     </div>
-                    <div class="news-content">
-                        <span class="news-tag cyan">Eventos</span>
-                        <h2 class="news-title">¡Nos vemos en la Game Dev Con 2024!</h2>
-                        <p class="news-description">
+                    <div class="contenido-noticia">
+                        <span class="etiqueta-noticia cian">Eventos</span>
+                        <h2 class="titulo-noticia">¡Nos vemos en la Game Dev Con 2024!</h2>
+                        <p class="descripcion-noticia">
                             Estaremos presentes en la Game Dev Con de este año para mostrar nuestros últimos proyectos. ¡Ven a nuestro stand para probar demos exclusivas y charlar con el equipo!
                         </p>
-                        <p class="news-date">Publicado el 20 de octubre de 2023</p>
-                        <button class="btn-secondary">Ver artículo c...</button>
+                        <p class="fecha-noticia">Publicado el 20 de octubre de 2023</p>
+                        <button class="boton-secundario">Ver artículo c...</button>
                     </div>
                 </article>
 
                 <!-- Ej 4, duplicado del 3 para ver como funciona el paginado -->
-                <article class="news-card" data-category="eventos">
-                    <div class="news-image">
+                <article class="tarjeta-noticia" data-category="eventos">
+                    <div class="imagen-noticia">
                         <img src="/img/juego3.png" alt="Game Dev Con">
                     </div>
-                    <div class="news-content">
-                        <span class="news-tag cyan">Eventos</span>
-                        <h2 class="news-title">¡Nos vemos en la Game Dev Con 2024!</h2>
-                        <p class="news-description">
+                    <div class="contenido-noticia">
+                        <span class="etiqueta-noticia cian">Eventos</span>
+                        <h2 class="titulo-noticia">¡Nos vemos en la Game Dev Con 2024!</h2>
+                        <p class="descripcion-noticia">
                             Estaremos presentes en la Game Dev Con de este año para mostrar nuestros últimos proyectos. ¡Ven a nuestro stand para probar demos exclusivas y charlar con el equipo!
                         </p>
-                        <p class="news-date">Publicado el 20 de octubre de 2023</p>
-                        <button class="btn-secondary">Ver artículo c...</button>
+                        <p class="fecha-noticia">Publicado el 20 de octubre de 2023</p>
+                        <button class="boton-secundario">Ver artículo c...</button>
                     </div>
                 </article>
             </div>
 
             <!-- Indice paginas -->
-            <div class="pagination">
-                <button class="page-btn">&lt;</button>
-                <button class="page-btn active">1</button>
-                <button class="page-btn">2</button>
-                <button class="page-btn">3</button>
-                <span class="page-dots">...</span>
-                <button class="page-btn">8</button>
-                <button class="page-btn">&gt;</button>
+            <div class="paginacion">
+                <button class="boton-pagina">&lt;</button>
+                <button class="boton-pagina activa">1</button>
+                <button class="boton-pagina">2</button>
+                <button class="boton-pagina">3</button>
+                <span class="puntos-pagina">...</span>
+                <button class="boton-pagina">8</button>
+                <button class="boton-pagina">&gt;</button>
             </div>
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
+    <!-- Pie de página -->
+    <footer class="pie-pagina">
+        <div class="contenedor">
+            <div class="contenido-pie">
                <div class="logo">
                     <!-- Logo hecho con 3 divs(escalones) -->
-                    <div class="stair-step stair-1"></div>
-                    <div class="stair-step stair-2"></div>
-                    <div class="stair-step stair-3"></div>
+                    <div class="escalon escalon-1"></div>
+                    <div class="escalon escalon-2"></div>
+                    <div class="escalon escalon-3"></div>
                     <span>Indie Game Studio</span>
                 </div>
-                <div class="footer-links">
+                <div class="enlaces-pie">
                     <a href="#terminos">Términos de Servicio</a>
                     <a href="#privacidad">Política de Privacidad</a>
                 </div>
-                <div class="social-links">
-                    <a href="https://x.com/?lang=es" class="social-icon">
+                <div class="enlaces-sociales">
+                    <a href="https://x.com/?lang=es" class="icono-social">
                         <img src="/img/twitter.svg" alt="Twitter">
                     </a>
-                    <a href="https://discord.com/" class="social-icon">
+                    <a href="https://discord.com/" class="icono-social">
                         <img src="/img/discord.svg" alt="Discord">
                     </a>
-                    <a href="https://www.instagram.com/" class="social-icon">
-                        <img src="/img/instagram.svg" alt="Instagram">
+                    <a href="https://www.instagram.com/" class="icono-social">
+                        <img src="/img/instagram.svg" alt="YouTube">
                     </a>
                 </div>
             </div>
-            <p class="copyright">© 2023 Indie Game Studio. Todos los derechos reservados.</p>
+            <p class="derechos-autor">© 2023 Indie Game Studio. Todos los derechos reservados.</p>
         </div>
     </footer>
 
     <script>
         // Sistema de filtrado y paginación de noticias
         document.addEventListener('DOMContentLoaded', function() {
-            const filterTabs = document.querySelectorAll('.filter-tabs .tab');
-            const newsCards = document.querySelectorAll('.news-card');
-            const pageButtons = document.querySelectorAll('.page-btn');
+            const filterTabs = document.querySelectorAll('.pestanas-filtro .pestana');
+            const newsCards = document.querySelectorAll('.tarjeta-noticia');
+            const pageButtons = document.querySelectorAll('.boton-pagina');
             const cardsPerPage = 3;
             let currentPage = 1;
             let currentFilter = 'todo';
@@ -222,9 +222,9 @@
                         }
                     } else if (!isNaN(btnText)) {
                         // Botones numéricos
-                        btn.classList.remove('active');
+                        btn.classList.remove('activa');
                         if (parseInt(btnText) === currentPage) {
-                            btn.classList.add('active');
+                            btn.classList.add('activa');
                         }
                     }
                 });
@@ -233,8 +233,8 @@
             // Event listeners para filtros
             filterTabs.forEach(tab => {
                 tab.addEventListener('click', function() {
-                    filterTabs.forEach(t => t.classList.remove('active'));
-                    this.classList.add('active');
+                    filterTabs.forEach(t => t.classList.remove('activa'));
+                    this.classList.add('activa');
 
                     currentFilter = this.textContent.trim().toLowerCase();
                     currentPage = 1; 
